2001-12-26  Jonathan Kamens  <jik@curl.com>

	* cygpath.cc (doit): Detect and warn about an empty path.  Detect and
	warn about errors converting a path.
	(main): Set prog_name correctly -- don't leave an extra slash or
	backslash at the beginning of it.

Fri Dec 14 14:04:37 2001  Jason Tishler <jason@tishler.net>

	* mkpasswd.c (enum_users): Change to unconditionally use
	the --path-to-home option, if supplied by the user.  Use default
	--path-to-home option value, if appropriate.
	(usage): Change usage statement to reflect new semantics.
	(main): Remove defaulting of the --path-to-home option.

Fri Dec 14 12:10:39 2001  Jason Tishler <jason@tishler.net>

	* mkpasswd.c (opts): Add indication that '-p' option requires an
	argument.

2001-12-11  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Add define to CXXFLAGS.

2001-12-03  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (usage): Add -c description.
	* cygpath.cc (usage): Alphabetize options.
	* strace.cc (usage): Ditto.

2001-11-21  Christopher Faylor  <cgf@redhat.com>

	* path.cc (cygpath): Don't consider cygdrive stuff when trying to derive
	native paths.

2001-11-20  Mark Bradshaw  <bradshaw@staff.crosswalk.com>

	* mkpasswd.c: include lmerr.h
	(main): New -u option to allow specifying a
	specific user.  If specified, groups aren't displayed and
	output is limited to only the specified user.
	(enum_users): If specific user is specified, via -u option,
	display only that user's record.  With -u use NetUserGetInfo
	instead of NetUserEnum.
	(load_netapi): Added netusergetinfo.

2001-11-15  Gary R. Van Sickle  <g.r.vansickle@worldnet.att.net>

	* strace.cc (main): Change getopt() to getopt_long().
	Add support for help and version info.
	Use new parse_mask() function for -m/--mask option.
	(longopts): Add long options structure.
	(opts): Move options string from getopts call to static var.
	(usage): Print usage information.
	(SCCSid): Version info.